--- a/custom_components/tibber_graphapi/translations/de.json
+++ b/custom_components/tibber_graphapi/translations/de.json
@@ -7,8 +7,7 @@
       "login_failed": "Login fehlgeschlagen – bitte Host und/oder Passwort prüfen",
       "cannot_connect": "Keine Verbindung möglich",
       "unknown": "Unbekannter Fehler",
-      "no_data": "Es konnten keine Daten abgerufen werden",
-      "unknown_mode": "Bitte prüfe die IP/Host bzw. die Node-Nummer - wenn Du dir sicher bist, dass Deine Informationen korrekt sind, dann kommuniziert der Tibber Pulse über ein noch nicht implementiertes Protokoll. Bitte erstell doch bitte auf GitHub ein Issue mit entsprechenden DEBUG-Log Informationen - ich benötige Beispieldaten. Danke im Voraus!"
+      "no_data": "Es konnten keine Daten abgerufen werden"
     },
     "step": {
       "user": {
@@ -38,11 +37,16 @@
     }
   },
   "entity": {
+    "binary_sensor": {
+      "enter_pincode": {"name": "PIN Eingabe notwendig"},
+      "alive": {"name": "Betriebsbereit"}
+    },
     "sensor": {
+      "range": {"name": "Reichweite"},
       "soc": {"name": "Ladestand"},
       "soc_max": {"name": "Ladestand min"},
       "soc_min": {"name": "Ladestand max"},
-      "range": {"name": "Reichweite"}
+      "evcc_charging_code": {"name": "EVCC Ladestatus-Code [A-F]"}
     }
   }
 }
